--- a/requirements.txt
+++ b/requirements.txt
@@ -25,20 +25,22 @@ chardet==5.2.0
 charset-normalizer==3.2.0
 chroma-hnswlib==0.7.3
 chromadb==0.4.11
-click==8.1.7
+click==8.2.1
 coloredlogs==15.0.1
 comm==0.1.4
 confection==0.1.3
 contourpy==1.1.1
 cryptography==41.0.4
+curl_cffi==0.11.3
 cycler==0.11.0
 cymem==2.0.8
 dataclasses-json==0.5.14
 debugpy==1.8.0
 decorator==5.1.1
 dill==0.3.7
+distro==1.9.0
 dnspython==2.4.2
-duckduckgo-search==5.3.0
+duckduckgo_search==8.0.3
 EbookLib==0.18
 effdet==0.4.1
 elastic-transport==8.4.0
@@ -81,6 +83,7 @@ ipython==8.15.0
 itsdangerous==2.1.2
 jedi==0.19.0
 Jinja2==3.1.2
+jiter==0.10.0
 joblib==1.3.2
 jsonpatch==1.33
 jsonpointer==2.4
@@ -94,7 +97,7 @@ langcodes==3.3.0
 langsmith==0.0.52
 layoutparser==0.3.4
 loguru==0.7.2
-lxml==4.9.3
+lxml==5.4.0
 manifest-ml==0.0.1
 Markdown==3.4.4
 markdown-it-py==3.0.0
@@ -118,7 +121,7 @@ olefile==0.46
 omegaconf==2.3.0
 onnx==1.14.1
 onnxruntime==1.16.0
-openai==0.28.0
+openai==1.86.0
 opencv-python==4.8.0.76
 openpyxl==3.1.2
 orjson==3.10.2
@@ -140,6 +143,7 @@ playwright==1.39.0
 portalocker==2.8.2
 posthog==3.0.2
 preshed==3.0.9
+primp==0.15.0
 prompt-toolkit==3.0.39
 protobuf==4.24.3
 psutil==5.9.5
@@ -219,7 +223,7 @@ traitlets==5.10.0
 transformers==4.34.0
 typer==0.9.0
 typing-inspect==0.9.0
-typing_extensions==4.7.1
+typing_extensions==4.14.0
 tzdata==2023.3
 tzlocal==4.3.1
 ujson==5.8.0
@@ -228,6 +232,7 @@ unstructured-inference==0.6.6
 unstructured.pytesseract==0.3.12
 urllib3==1.26.16
 uvicorn==0.23.2
+uvloop==0.21.0
 validators==0.22.0
 wasabi==1.1.2
 watchdog==3.0.0
@@ -235,6 +240,7 @@ watchfiles==0.20.0
 wcwidth==0.2.6
 websockets==11.0.3
 wikipedia==1.4.0
+Wikipedia-API==0.8.1
 xlrd==2.0.1
 XlsxWriter==3.1.5
 yarl==1.9.2
